--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   "dependencies": {
     "next": "latest",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "tailwindcss": "^2.0.3"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
     "postcss-preset-env": "^6.7.0",
-    "tailwindcss": "^2.0.3",
     "typescript": "4.0"
   },
   "license": "MIT"
