--- a/package.json
+++ b/package.json
@@ -1,26 +1,31 @@
 {
-  "name": "with-typescript",
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start",
-    "type-check": "tsc"
-  },
-  "dependencies": {
-    "aos": "^2.3.4",
-    "next": "latest",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "tailwindcss": "^2.0.3"
-  },
-  "devDependencies": {
-    "@types/aos": "^3.0.3",
-    "@types/node": "^12.12.21",
-    "@types/react": "^16.9.16",
-    "@types/react-dom": "^16.9.4",
-    "postcss-preset-env": "^6.7.0",
-    "typescript": "4.0"
-  },
-  "license": "MIT"
+    "name": "with-typescript",
+    "version": "1.0.0",
+    "scripts": {
+        "dev": "next",
+        "build": "next build",
+        "start": "next start",
+        "type-check": "tsc"
+    },
+    "dependencies": {
+        "aos": "^2.3.4",
+        "gray-matter": "^4.0.3",
+        "next": "latest",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "remark": "^14.0.2",
+        "remark-html": "^15.0.1"
+    },
+    "devDependencies": {
+        "@types/aos": "^3.0.3",
+        "@types/node": "^12.12.21",
+        "@types/react": "^16.9.16",
+        "@types/react-dom": "^16.9.4",
+        "autoprefixer": "^10.4.8",
+        "postcss": "^8.4.16",
+        "tailwindcss": "^3.1.8",
+        "postcss-preset-env": "^6.7.0",
+        "typescript": "4.5.4"
+    },
+    "license": "MIT"
 }
