--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "aos": "^2.3.4",
         "gray-matter": "^4.0.3",
+        "mermaid": "^9.3.0",
         "next": "latest",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
@@ -23,8 +24,8 @@
         "@types/react-dom": "^16.9.4",
         "autoprefixer": "^10.4.8",
         "postcss": "^8.4.16",
-        "tailwindcss": "^3.1.8",
         "postcss-preset-env": "^6.7.0",
+        "tailwindcss": "^3.1.8",
         "typescript": "4.5.4"
     },
     "license": "MIT"
