--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     },
     "dependencies": {
         "aos": "^2.3.4",
+        "gh-templating": "^1.3.0",
         "gray-matter": "^4.0.3",
         "mermaid": "^9.3.0",
         "next": "latest",
